--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -70,7 +69,7 @@ button:focus-visible {
   }
 } */
 
-body{
+body {
   margin: 0;
-  
+  font-family: "Poppins";
 }
